--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.inera.certificate.tools</groupId>
   <artifactId>Migrering</artifactId>
-  <version>1.2-RC1</version>
+  <version>1.2.1</version>
   <name>Migrering</name>
   <packaging>jar</packaging>
 
