--- a/tools/AnonymiseraIntygsDatabas/pom.xml
+++ b/tools/AnonymiseraIntygsDatabas/pom.xml
@@ -10,9 +10,8 @@
     <version>1.3-SNAPSHOT</version>
   </parent>
     
-  <groupId>se.inera.certificate</groupId>
   <artifactId>anonymisera-intygsdatabas</artifactId>
-  <version>1.0.5</version>
+  <version>1.0.6</version>
   <packaging>jar</packaging>
   <name>Anonymisering av intyg</name>
 
@@ -23,20 +22,34 @@
       <artifactId>groovy-all</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.gpars</groupId>
+      <artifactId>gpars</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
     <!-- Database dependencies -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-    </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.0</version>
+    </dependency>
+              
     <!-- Test dependencies -->
     <dependency>
       <groupId>junit</groupId>
