INTYG-1330 OBSERVERA meddelande när man skickar igen är kvar om man skickat ett annat intyg tidigare och sen försöker skicka ett annat intyg som inte skickats.

--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -9,11 +9,11 @@
 # [logicalAddress] is the address that is to be used for sending certificates 
 
 # Defines the recipient FK (Försäkringskassan)
-recipient.fk.name = Försäkringskassan
-recipient.fk.logicalAddress = FK
+recipient.FK.name = Försäkringskassan
+recipient.FK.logicalAddress = FK
 # Defines the recipient TS (Transportstyrelsen)
-recipient.ts.name = Transportstyrelsen
-recipient.ts.logicalAddress = tsTestAddress
+recipient.TS.name = Transportstyrelsen
+recipient.TS.logicalAddress = tsTestAddress
 
 # Lines with the prefix: recipient-transport-model-version are used to indicate which transportmodel-version a
 # certain Recipient supports for a give certificate.  
@@ -24,7 +24,7 @@ recipient.ts.logicalAddress = tsTestAddress
 # [TransportModelVersion] is an enum constant of the type TransportModelVersion
 
 # FK7263 can only be sent to FK (legacy model version)
-recipient-transport-model-version.fk.fk7263 = LEGACY_LAKARUTLATANDE
+recipient-transport-model-version.FK.fk7263 = LEGACY_LAKARUTLATANDE
 # TS-bas & TS-diabetes can only be sent to TS
-recipient-transport-model-version.ts.ts-bas = UTLATANDE_V1
-recipient-transport-model-version.ts.ts-diabetes = UTLATANDE_V1
+recipient-transport-model-version.TS.ts-bas = UTLATANDE_V1
+recipient-transport-model-version.TS.ts-diabetes = UTLATANDE_V1
