--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -11,7 +11,7 @@
         <version>1.3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>persistence</artifactId>
+    <artifactId>certificate-persistence</artifactId>
     <name>Inera Certificate Persistence</name>
 
     <properties>
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>schemas</artifactId>
+            <artifactId>certificate-schemas</artifactId>
         </dependency>
 
         <!-- Dependencies to Intygstjansten's modules project -->
