Cherry-picked from [a7e5b96]: Gjort en ny Spring-profil för att kunna köra Jetty i utvecklingsläge mot MySQL. Konfig av databas görs i jetty-context.xml och profilen aktiveras i samband med Jetty med maven profilen -Plocal-db

--- a/web/src/main/resources/default.local.properties
+++ b/web/src/main/resources/default.local.properties
@@ -1,5 +1,6 @@
-registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
+registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-medical-certificate-stub
+registercertificatev1.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url = http://localhost:8080/inera-certificate/send-certificate-question-stub
+revokemedicalcertificatev1.endpoint.url = http://localhost:8080/inera-certificate/revoke-medical-certificate-stub
 
-certificatesender.address.fk7263 = FK
 revokecertificate.address.fk7263 = FK
