INTYG-1305: Städat upp i POMs och sett till att enbart relevanta beroenden exponeras.

--- a/tools/LiquibaseRunnerForCertificate/pom.xml
+++ b/tools/LiquibaseRunnerForCertificate/pom.xml
@@ -15,7 +15,7 @@
   <packaging>jar</packaging>
 
   <properties>
-      <checkstyle.basedir>${project.basedir}/../..</checkstyle.basedir>
+    <checkstyle.basedir>${project.basedir}/../..</checkstyle.basedir>
   </properties>
 
   <dependencies>
@@ -64,6 +64,10 @@
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
     </dependency>
   </dependencies>
 
