Ändrade felaktiga referenser från se.inera.certificate.schemas till se.inera.certificate.certificate-schemas.

--- a/tools/LiquibaseRunnerForCertificate/pom.xml
+++ b/tools/LiquibaseRunnerForCertificate/pom.xml
@@ -91,7 +91,7 @@
               </transformers>
               <artifactSet>
                 <excludes>
-                  <exclude>se.inera.certificate:schemas</exclude>
+                  <exclude>se.inera.certificate:certificate-schemas</exclude>
                   <exclude>se.inera.certificate.modules:*</exclude>
                   <exclude>org.springframework:*</exclude>
                   <exclude>org.hibernate.*:*</exclude>
