--- a/tools/Anonymisering/pom.xml
+++ b/tools/Anonymisering/pom.xml
@@ -10,18 +10,13 @@
     <version>1.3-SNAPSHOT</version>
   </parent>
     
-  <artifactId>anonymisera-intygsdatabas</artifactId>
-  <version>1.0.6</version>
+  <groupId>se.inera.certificate.tools</groupId>
+  <artifactId>anonymisering</artifactId>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
-  <name>Anonymisering av intyg</name>
+  <name>Anonymisering</name>
 
   <dependencies>
-
-    <dependency>
-      <groupId>se.inera.certificate.tools</groupId>
-      <artifactId>anonymisering</artifactId>
-      <version>1.0.0</version>
-    </dependency>
 
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
@@ -33,29 +28,6 @@
       <artifactId>joda-time</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.codehaus.gpars</groupId>
-      <artifactId>gpars</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-
-    <!-- Database dependencies -->
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-dbcp2</artifactId>
-      <version>2.0</version>
-    </dependency>
-              
     <!-- Test dependencies -->
     <dependency>
       <groupId>junit</groupId>
@@ -91,7 +63,6 @@
 
   <build>
     <plugins>
-
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -111,30 +82,6 @@
           </dependency>
         </dependencies>
       </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>se.inera.certificate.tools.AnonymiseraIntygsDatabas</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <appendAssemblyId>false</appendAssemblyId>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      
     </plugins>
   </build>
   
