--- a/tools/AnonymiseraIntygsDatabas/pom.xml
+++ b/tools/AnonymiseraIntygsDatabas/pom.xml
@@ -4,12 +4,13 @@
 
   <modelVersion>4.0.0</modelVersion>
   
- <parent>
-    <groupId>se.inera.certificate</groupId>
-    <artifactId>certificate</artifactId>
+  <parent>
+    <groupId>se.inera.intyg</groupId>
+    <artifactId>intyg-parent</artifactId>
     <version>1.3-SNAPSHOT</version>
   </parent>
     
+  <groupId>se.inera.certificate.tools</groupId>
   <artifactId>anonymisera-intygsdatabas</artifactId>
   <version>1.0.6</version>
   <packaging>jar</packaging>
@@ -20,7 +21,7 @@
     <dependency>
       <groupId>se.inera.certificate.tools</groupId>
       <artifactId>anonymisering</artifactId>
-      <version>1.0.0</version>
+      <version>1.0.1</version>
     </dependency>
 
     <dependency>
@@ -53,7 +54,6 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
-      <version>2.0</version>
     </dependency>
               
     <!-- Test dependencies -->
@@ -91,7 +91,6 @@
 
   <build>
     <plugins>
-
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -134,7 +133,6 @@
           </execution>
         </executions>
       </plugin>
-      
     </plugins>
   </build>
   
