--- a/tools/Migrering-smittskydd/dataSource.properties
+++ b/tools/Migrering-smittskydd/dataSource.properties
@@ -1,12 +1,4 @@
-dataSource.url=jdbc:mysql://localhost:13306/intyg?useCompression=true
+dataSource.url=jdbc:mysql://localhost:3306/intyg?useCompression=true
 dataSource.driver=com.mysql.jdbc.Driver
 dataSource.username=intyg
-dataSource.password=nRcgXBdK
-#dataSource.url=jdbc:mysql://localhost:3306/intyg?useCompression=true
-#dataSource.driver=com.mysql.jdbc.Driver
-#dataSource.username=intyg
-#dataSource.password=intyg
-#dataSource.url=jdbc:h2:tcp://localhost:9092/mem:dataSource
-#dataSource.driver=org.h2.Driver
-#dataSource.username=sa
-#dataSource.password=
+dataSource.password=intyg
