--- a/tools/Migrering-falt5/dataSource.properties
+++ b/tools/Migrering-falt5/dataSource.properties
@@ -1,7 +1,7 @@
-dataSource.url=jdbc:mysql://localhost:3306/<database>?useCompression=true
+dataSource.url=jdbc:mysql://##DBSERVER##:3306/##DBNAME##?useCompression=true
 dataSource.driver=com.mysql.jdbc.Driver
-dataSource.username=<user>
-dataSource.password=<password>
+dataSource.username=##USER##
+dataSource.password=##PASSWORD##
 #dataSource.url=jdbc:h2:tcp://localhost:9092/mem:dataSource
 #dataSource.driver=org.h2.Driver
 #dataSource.username=sa
