--- a/tools/Anonymisering/pom.xml
+++ b/tools/Anonymisering/pom.xml
@@ -5,19 +5,17 @@
   <modelVersion>4.0.0</modelVersion>
   
  <parent>
-    <groupId>se.inera.certificate</groupId>
-    <artifactId>certificate</artifactId>
+    <groupId>se.inera.intyg.common</groupId>
+    <artifactId>common-pom</artifactId>
     <version>1.3-SNAPSHOT</version>
   </parent>
     
-  <groupId>se.inera.certificate.tools</groupId>
+  <groupId>se.inera.intyg.tools</groupId>
   <artifactId>anonymisering</artifactId>
   <version>1.0.1</version>
-  <packaging>jar</packaging>
   <name>Anonymisering</name>
 
   <dependencies>
-
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
