--- a/tools/liquibase-runner-intyg/pom.xml
+++ b/tools/liquibase-runner-intyg/pom.xml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>se.inera.certificate</groupId>
-    <artifactId>certificate</artifactId>
-    <version>1.3-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <groupId>se.inera.intyg.intygstjanst</groupId>
+    <artifactId>intygstjanst</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>liquibase-runner-for-certificate</artifactId>
-  <name>Liquibase runner for certificate (standalone)</name>
-  <packaging>jar</packaging>
+  <groupId>se.inera.intyg.intygstjanst.tools</groupId>
+  <artifactId>intygstjanst-liquibase-runner</artifactId>
+  <name>Liquibase Runner för Intygstjänsten</name>
 
   <properties>
     <checkstyle.basedir>${project.basedir}/../..</checkstyle.basedir>
   </properties>
 
   <dependencies>
-      <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>liquibase-runner</artifactId>
-      </dependency>
-      <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>certificate-persistence</artifactId>
-		<exclusions>
+    <!-- Project dependencies -->
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>intygstjanst-persistence</artifactId>
+      <version>${project.parent.version}</version>
+      <exclusions>
         <exclusion>
-          <groupId>se.inera.certificate</groupId>
+          <groupId>se.inera.intyg.intygstjanst</groupId>
           <artifactId>*</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>se.inera.certificate.modules</groupId>
-          <artifactId>module-support</artifactId>
+          <groupId>se.inera.intyg.intygstyper</groupId>
+          <artifactId>support</artifactId>
         </exclusion>
         <exclusion>
           <groupId>org.springframework</groupId>
@@ -65,6 +64,13 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <!-- Dependencies to Tools -->
+    <dependency>
+      <groupId>se.inera.intyg.tools</groupId>
+      <artifactId>liquibase-runner</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -91,8 +97,8 @@
               </transformers>
               <artifactSet>
                 <excludes>
-                  <exclude>se.inera.certificate:certificate-schemas</exclude>
-                  <exclude>se.inera.certificate.modules:*</exclude>
+                  <exclude>se.inera.intyg.schemas:intygstjanst-schemas</exclude>
+                  <exclude>se.inera.intyg.intygstyper:*</exclude>
                   <exclude>org.springframework:*</exclude>
                   <exclude>org.hibernate.*:*</exclude>
                   <exclude>org.jadira.usertype:*</exclude>
