--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -3,13 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>se.inera.certificate</groupId>
-    <artifactId>certificate</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <groupId>se.inera.intyg.intygstjanst</groupId>
+    <artifactId>intygstjanst</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>certificate-schemas</artifactId>
-  <name>Inera Certificate Schemas</name>
+  <groupId>se.inera.intyg.schemas</groupId>
+  <artifactId>intygstjanst-schemas</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <name>Intygstjänsten Schemas</name>
 
   <properties>
     <schema.path>${basedir}/src/main/resources/schemas</schema.path>
@@ -18,15 +21,16 @@
   </properties>
 
   <dependencies>
+    <!-- Dependencies to Common -->
     <dependency>
-      <groupId>se.inera.certificate.modules</groupId>
+      <groupId>se.inera.intyg.common</groupId>
       <artifactId>integration-util</artifactId>
-      <version>${project.parent.version}</version>
     </dependency>
+
+    <!-- Dependencies to Intygstyper -->
     <dependency>
-      <groupId>se.inera.certificate.modules</groupId>
-      <artifactId>module-support</artifactId>
-      <version>${project.parent.version}</version>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>support</artifactId>
     </dependency>
 
     <dependency>
