--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -4,14 +4,14 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>se.inera.certificate</groupId>
-    <artifactId>certificate</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <groupId>se.inera.intyg.intygstjanst</groupId>
+    <artifactId>intygstjanst</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   
-  <artifactId>certificate-specifications</artifactId>
-  <packaging>jar</packaging>
-  <name>Inera Certificate FitNesse specifications</name>
+  <artifactId>intygstjanst-specifications</artifactId>
+  <name>Intygstjänsten FitNesse Specifications</name>
 
   <properties>
     <certificate.baseUrl>http://localhost:8080/inera-certificate/</certificate.baseUrl>
@@ -29,17 +29,16 @@
 
   <dependencies>
 
+    <!-- Project dependencies -->
     <dependency>
-      <groupId>se.inera.certificate</groupId>
-      <artifactId>model</artifactId>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>intygstjanst-persistence</artifactId>
     </dependency>
+
+    <!-- Dependencies to Schemas -->
     <dependency>
-      <groupId>se.inera.certificate</groupId>
-      <artifactId>certificate-persistence</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>se.inera.certificate</groupId>
-      <artifactId>certificate-schemas</artifactId>
+      <groupId>se.inera.intyg.schemas</groupId>
+      <artifactId>intygstjanst-schemas</artifactId>
     </dependency>
 
     <dependency>
