Byter namn på tools/anonymisering temporärt för fixa till liten/stor bokstavsbekymmer.
På byggservern skapas katalogen tools/Anonymisering istället för tools/anonymisering vilket gör att bygget går sänder. Byter namn helt på mappen temporärt för att se om det bygger.

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <module>persistence</module>
     <module>specifications</module>
     <module>web</module>
-    <module>tools/anonymisering</module>
+    <module>tools/ianonymisering</module>
     <module>tools/liquibase-runner</module>
   </modules>
 
