--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>se.inera.intyg.common</groupId>
     <artifactId>common-pom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <groupId>se.inera.intyg.intygstjanst</groupId>
   <artifactId>intygstjanst</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Intygstjänsten</name>
@@ -20,22 +20,22 @@
   <properties>
 
     <!-- Common -->
-    <common-support.version>1.0-SNAPSHOT</common-support.version>
-    <common-web.version>1.0-SNAPSHOT</common-web.version>
-    <integration-util.version>1.0-SNAPSHOT</integration-util.version>
-    <logging-util.version>1.1.3-SNAPSHOT</logging-util.version>
+    <common-support.version>1.0.0</common-support.version>
+    <common-web.version>1.0.0</common-web.version>
+    <integration-util.version>1.0.0</integration-util.version>
+    <logging-util.version>1.1.3</logging-util.version>
 
     <!-- Intygstyper -->
-    <fk7263.version>1.0-SNAPSHOT</fk7263.version>
-    <ts-bas.version>1.0-SNAPSHOT</ts-bas.version>
-    <ts-diabetes.version>1.0-SNAPSHOT</ts-diabetes.version>
+    <fk7263.version>0-SNAPSHOT</fk7263.version>
+    <ts-bas.version>0-SNAPSHOT</ts-bas.version>
+    <ts-diabetes.version>0-SNAPSHOT</ts-diabetes.version>
 
     <!-- Schemas -->
-    <schemas.version>1.0-SNAPSHOT</schemas.version>
+    <schemas.version>1.0.0</schemas.version>
 
     <!-- Tools -->
     <anonymisering.version>1.0.1</anonymisering.version>
-    <liquibase-runner.version>1.0-SNAPSHOT</liquibase-runner.version>
+    <liquibase-runner.version>1.0.0</liquibase-runner.version>
 
     <checkstyle.basedir>${project.basedir}</checkstyle.basedir>
   </properties>
@@ -50,8 +50,7 @@
   </modules>
 
   <scm>
-    <connection>scm:git:https://github.com/sklintyg/intygstjanst.git</connection>
-    <tag>HEAD</tag>
+    <connection>scm:git:git@github.com:sklintyg/intygstjanst.git</connection>
   </scm>
 
   <dependencyManagement>
