--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
   <properties>
 
     <!-- Common -->
-    <common-support.version>1.0-SNAPSHOT</common-support.version>
-    <common-web.version>1.0-SNAPSHOT</common-web.version>
-    <integration-util.version>1.0-SNAPSHOT</integration-util.version>
-    <logging-util.version>1.1.3-SNAPSHOT</logging-util.version>
+    <common-support.version>1.0.0</common-support.version>
+    <common-web.version>1.0.0</common-web.version>
+    <integration-util.version>1.0.0</integration-util.version>
+    <logging-util.version>1.1.3</logging-util.version>
 
     <!-- Intygstyper -->
     <fk7263.version>1.0-SNAPSHOT</fk7263.version>
@@ -31,11 +31,11 @@
     <ts-diabetes.version>1.0-SNAPSHOT</ts-diabetes.version>
 
     <!-- Schemas -->
-    <schemas.version>1.0-SNAPSHOT</schemas.version>
+    <schemas.version>1.0.0</schemas.version>
 
     <!-- Tools -->
-    <anonymisering.version>1.0.1</anonymisering.version>
-    <liquibase-runner.version>1.0-SNAPSHOT</liquibase-runner.version>
+    <anonymisering.version>1.0.2</anonymisering.version>
+    <liquibase-runner.version>1.0.0</liquibase-runner.version>
   </properties>
 
   <modules>
