--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     <logging-util.version>1.1.3</logging-util.version>
 
     <!-- Intygstyper -->
-    <fk7263.version>0-SNAPSHOT</fk7263.version>
-    <ts-bas.version>0-SNAPSHOT</ts-bas.version>
-    <ts-diabetes.version>0-SNAPSHOT</ts-diabetes.version>
+    <fk7263.version>(,2.0.1]</fk7263.version>
+    <ts-bas.version>(,1.0.1]</ts-bas.version>
+    <ts-diabetes.version>(,1.0.1]</ts-diabetes.version>
 
     <!-- Schemas -->
     <schemas.version>1.0.0</schemas.version>
@@ -194,7 +194,7 @@
       <id>callista-snapshot</id>
       <url>https://${repository.host}/snapshot/</url>
       <releases>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </releases>
       <snapshots>
         <enabled>true</enabled>
