--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     <logging-util.version>1.1.3</logging-util.version>
 
     <!-- Intygstyper -->
-    <fk7263.version>(,2.0.1]</fk7263.version>
-    <ts-bas.version>(,1.0.1]</ts-bas.version>
-    <ts-diabetes.version>(,1.0.1]</ts-diabetes.version>
+    <fk7263.version>(,2.0.0)</fk7263.version>
+    <ts-bas.version>(,1.0.0)</ts-bas.version>
+    <ts-diabetes.version>(,1.0.0)</ts-diabetes.version>
 
     <!-- Schemas -->
     <schemas.version>1.0.0</schemas.version>
