--- a/tools/liquibase-runner/src/main/assembly/template/liquibase.properties
+++ b/tools/liquibase-runner/src/main/assembly/template/liquibase.properties
@@ -1,4 +1,4 @@
 driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://##URL (i.e localhost:3306/webcert?useCompression=true) ##
+url: jdbc:mysql://##URL (i.e localhost:3306/intyg?useCompression=true) ##
 username: ##USER##
 password: ##PASS##
