--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -21,13 +21,12 @@
       <groupId>se.inera.intyg.common</groupId>
       <artifactId>common-support</artifactId>
     </dependency>
-
-    <!-- Schemas -->
+    
     <dependency>
-      <groupId>se.inera.intyg.schemas</groupId>
-      <artifactId>schemas-intygstjanst</artifactId>
+      <groupId>se.inera.intyg.common</groupId>
+      <artifactId>integration-util</artifactId>
     </dependency>
-
+        
     <!-- Tools -->
     <dependency>
       <groupId>se.inera.intyg.tools</groupId>
@@ -37,6 +36,11 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
     </dependency>
 
     <dependency>
@@ -57,7 +61,11 @@
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
     </dependency>
-
+    
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
