--- a/pom.xml
+++ b/pom.xml
@@ -26,15 +26,15 @@
     <logging-util.version>1.1.3</logging-util.version>
 
     <!-- Intygstyper -->
-    <fk7263.version>(,2.0.0)</fk7263.version>
-    <ts-bas.version>(,1.0.0)</ts-bas.version>
-    <ts-diabetes.version>(,1.0.0)</ts-diabetes.version>
+    <fk7263.version>0-SNAPSHOT</fk7263.version>
+    <ts-bas.version>0-SNAPSHOT</ts-bas.version>
+    <ts-diabetes.version>0-SNAPSHOT</ts-diabetes.version>
 
     <!-- Schemas -->
     <schemas.version>1.0.0</schemas.version>
 
     <!-- Tools -->
-    <anonymisering.version>1.0.1</anonymisering.version>
+    <anonymisering.version>1.0.2</anonymisering.version>
     <liquibase-runner.version>1.0.0</liquibase-runner.version>
   </properties>
 
