--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -32,6 +32,9 @@
 
     <!-- Schemas -->
     <schemas.version>0-SNAPSHOT</schemas.version>
+    <clinicalprocess-healthcond-certificate.version>0-SNAPSHOT</clinicalprocess-healthcond-certificate.version>
+    <insuranceprocess-healthreporting.version>0-SNAPSHOT</insuranceprocess-healthreporting.version>
+    <itintegration-monitoring.version>0-SNAPSHOT</itintegration-monitoring.version>
 
     <!-- Tools -->
     <anonymisering.version>0-SNAPSHOT</anonymisering.version>
@@ -109,6 +112,22 @@
         <groupId>se.inera.intyg.schemas</groupId>
         <artifactId>schemas-intygstjanst</artifactId>
         <version>${schemas.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate.v1</groupId>
+        <artifactId>clinicalprocess-healthcond-certificate-interactions</artifactId>
+        <version>${clinicalprocess-healthcond-certificate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting.v1</groupId>
+        <artifactId>insuranceprocess-healthreporting-interactions</artifactId>
+        <version>${insuranceprocess-healthreporting.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>se.riv.itintegration.monitoring</groupId>
+        <artifactId>itintegration-monitoring-interactions</artifactId>
+        <version>${itintegration-monitoring.version}</version>
       </dependency>
 
       <!-- Tools -->
