--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,7 @@
   <properties>
 
     <!-- Common -->
-    <common-support.version>1.0.0</common-support.version>
-    <common-web.version>1.0.0</common-web.version>
-    <integration-util.version>1.0.0</integration-util.version>
-    <logging-util.version>1.1.3</logging-util.version>
+    <common.version>(,2.0.0)</common.version>
 
     <!-- Intygstyper -->
     <fk7263.version>(,2.0.0)</fk7263.version>
@@ -31,11 +28,11 @@
     <ts-diabetes.version>(,1.0.0)</ts-diabetes.version>
 
     <!-- Schemas -->
-    <schemas.version>1.0.0</schemas.version>
+    <schemas.version>(,2.0.0)</schemas.version>
 
     <!-- Tools -->
-    <anonymisering.version>1.0.1</anonymisering.version>
-    <liquibase-runner.version>1.0.0</liquibase-runner.version>
+    <anonymisering.version>(,2.0.0)</anonymisering.version>
+    <liquibase-runner.version>(,2.0.0)</liquibase-runner.version>
 
     <checkstyle.basedir>${project.basedir}</checkstyle.basedir>
   </properties>
@@ -71,22 +68,22 @@
       <dependency>
         <groupId>se.inera.intyg.common</groupId>
         <artifactId>common-support</artifactId>
-        <version>${common-support.version}</version>
+        <version>${common.version}</version>
       </dependency>
       <dependency>
         <groupId>se.inera.intyg.common</groupId>
         <artifactId>common-web</artifactId>
-        <version>${common-web.version}</version>
+        <version>${common.version}</version>
       </dependency>
       <dependency>
         <groupId>se.inera.intyg.common</groupId>
         <artifactId>integration-util</artifactId>
-        <version>${integration-util.version}</version>
+        <version>${common.version}</version>
       </dependency>
       <dependency>
         <groupId>se.inera.intyg.common</groupId>
         <artifactId>logging-util</artifactId>
-        <version>${logging-util.version}</version>
+        <version>${common.version}</version>
       </dependency>
 
       <!-- Intygstyper -->
@@ -182,7 +179,7 @@
   <repositories>
     <repository>
       <id>callista-release</id>
-      <url>https://${repository.host}/release/</url>
+      <url>http://repository-callistasoftware.forge.cloudbees.com/release/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -192,7 +189,7 @@
     </repository>
     <repository>
       <id>callista-snapshot</id>
-      <url>https://${repository.host}/snapshot/</url>
+      <url>http://repository-callistasoftware.forge.cloudbees.com/snapshot/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -202,7 +199,7 @@
     </repository>
     <repository>
       <id>thirdparty</id>
-      <url>https://${repository.host}/3rdparty</url>
+      <url>http://repository-callistasoftware.forge.cloudbees.com/3rdparty</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -211,5 +208,4 @@
       </snapshots>
     </repository>
   </repositories>
-
 </project>
