--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <module>persistence</module>
     <module>specifications</module>
     <module>web</module>
-    <module>tools/anonymisering</module>
+    <module>tools/AnonymiseraIntygsDatabas</module>
     <module>tools/liquibase-runner</module>
   </modules>
 
